--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenue sur le planning des colles</h1>
+        <h1>Bienvenue sur votre colloscope.</h1>
 
         <!-- Étape 1 : Sélection du groupe -->
         <div id="group-section" class="section show">
@@ -115,7 +115,7 @@
 
         <!-- Étape 2 : Sélection de la semaine -->
         <div id="week-section" class="section">
-            <h2>Sélectionne une semaine</h2>
+            <h2>Sélectionne une semaine.</h2>
             <form action="/planning" method="post" id="week-form">
                 <input type="hidden" name="group" id="selected-group">
                 <select name="iso_week" id="iso_week">
