--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
 
         <!-- Étape 1 : Sélection du groupe -->
         <div id="group-section" class="section show">
-            <h2>Quel est ton groupe ?</h2>
+            <h2>Quel est votre groupe ?</h2>
             <select id="group">
                 <option value="" disabled selected>Choisissez un groupe</option>
                 <option value="G1">Groupe 1</option>
@@ -115,7 +115,7 @@
 
         <!-- Étape 2 : Sélection de la semaine -->
         <div id="week-section" class="section">
-            <h2>Sélectionne une semaine.</h2>
+            <h2>Sélectionnez une semaine.</h2>
             <form action="/planning" method="post" id="week-form">
                 <input type="hidden" name="group" id="selected-group">
                 <select name="iso_week" id="iso_week">
