fix mobile button

--- a/templates/ds.html
+++ b/templates/ds.html
@@ -77,7 +77,7 @@
             background-color: #000000; /* Fond noir */
             color: #ffffff; /* Texte blanc */
             border: 2px solid #ffffff; /* Outline blanche */
-            padding: 15px 30px;
+            padding: 10px 20px;
             font-size: 16px;
             border-radius: 30px;
             cursor: pointer;
@@ -106,7 +106,7 @@
         {% endfor %}
     </div>
 
-    <a href="/" class="float-button">Retour à l'accueil</a>
+    <a href="/" class="float-button">Retour</a>
 
     <script>
         // Scroll automatique vers le prochain DS
