--- a/templates/planning.html
+++ b/templates/planning.html
@@ -23,22 +23,31 @@
             text-align: center;
         }
 
-        /* Maintenance Banner */
         .maintenance-banner {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100px;
-            background-color: rgba(255, 0, 0, 1);
-            color: white;
-            font-size: 28px;
+            height: 30px;
+            background-color: rgba(0, 255, 0, 0);
             text-align: center;
             display: flex;
             justify-content: center;
             align-items: center;
             z-index: 9999;
         }
+
+        .banner-text {
+            color: rgb(0, 255, 0);
+            background-color: black;
+            padding: 3px 10px;
+            border-radius: 10px;
+            font-size: 12px;
+            border: 2px solid rgb(0, 255, 0);
+        }
+
+
+
 
         .week-container {
             width: 100%;
@@ -134,7 +143,7 @@
     
     <!-- Maintenance Banner -->
     <div class="maintenance-banner">
-        🚧 Le colloscope n'est pas à jour! 🚧
+        <span class="banner-text">Le colloscope est à jour!</span>
     </div>
 
     <h1>Planning des colles pour {{ group }}</h1>
@@ -164,6 +173,15 @@
                     <div class="colle-divider"></div>
                 {% endif %}
                 {% endfor %}
+
+                <!-- If there's only one colle, we display "pas d'information" for the missing second one -->
+                {% if week.week_colles|length == 1 %}
+                    <div class="colle-divider"></div>
+                    <p class="colle-info">
+                        Pas d'information pour la deuxième colle cette semaine.
+                    </p>
+                {% endif %}
+
             </div>
         {% endif %}
         {% endfor %}
